build_final_final.log
    Checking jpegexp-rs v0.1.0 (C:\Users\aroja\CODE\jpegls-rs)
warning: unused imports: `MAXIMUM_BITS_PER_SAMPLE`, `MAXIMUM_COMPONENT_COUNT_IN_SCAN`, and `MINIMUM_BITS_PER_SAMPLE`
 --> src\jpeg_stream_reader.rs:5:5
  |
5 |     MAXIMUM_BITS_PER_SAMPLE, MAXIMUM_COMPONENT_COUNT_IN_SCAN,
  |     ^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
6 |     MINIMUM_BITS_PER_SAMPLE,
  |     ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `ColorTransformation` and `CompressedDataFormat`
  --> src\jpeg_stream_reader.rs:11:5
   |
11 |     CompressedDataFormat, FrameInfo, InterleaveMode, SpiffHeader, ColorTransformation
   |     ^^^^^^^^^^^^^^^^^^^^                                          ^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::convert::TryInto`
 --> src\scan_decoder.rs:1:5
  |
1 | use std::convert::TryInto;
  |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `InterleaveMode`
 --> src\scan_encoder.rs:5:24
  |
5 | use crate::{FrameInfo, InterleaveMode, JpeglsPcParameters};
  |                        ^^^^^^^^^^^^^^

error[E0308]: mismatched types
   --> src\jpeg_stream_reader.rs:121:9
    |
116 |     fn read_marker(&mut self) -> Result<JpegMarkerCode, JpeglsError> {
    |                                  ----------------------------------- expected `Result<JpegMarkerCode, JpeglsError>` because of return type
...
121 |         JpegMarkerCode::try_from(marker_byte)
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Result<JpegMarkerCode, JpeglsError>`, found `Result<JpegMarkerCode, ...>`
    |
    = note: expected enum `Result<_, JpeglsError>`
               found enum `Result<_, TryFromPrimitiveError<JpegMarkerCode>>`

error[E0277]: the trait bound `InterleaveMode: TryFrom<u8>` is not satisfied
   --> src\jpeg_stream_reader.rs:171:43
    |
171 |         self.parameters.interleave_mode = InterleaveMode::try_from(self.read_byte()?)?;
    |                                           ^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `From<u8>` is not implemented for `InterleaveMode`
   --> src\lib.rs:8:1
    |
  8 | pub enum InterleaveMode {
    | ^^^^^^^^^^^^^^^^^^^^^^^
    = note: required for `u8` to implement `Into<InterleaveMode>`
    = note: required for `InterleaveMode` to implement `TryFrom<u8>`

error[E0277]: `?` couldn't convert the error to `JpeglsError`
   --> src\jpeg_stream_reader.rs:171:86
    |
171 |         self.parameters.interleave_mode = InterleaveMode::try_from(self.read_byte()?)?;
    |                                           -------------------------------------------^ the trait `From<Infallible>` is not implemented for `JpeglsError`
    |                                           |
    |                                           this can't be annotated with `?` because it has type `Result<_, Infallible>`
    |
note: `JpeglsError` needs to implement `From<Infallible>`
   --> src\error.rs:4:1
    |
  4 | pub enum JpeglsError {
    | ^^^^^^^^^^^^^^^^^^^^
    = note: the question mark operation (`?`) implicitly performs a conversion on the error value using the `From` trait

error[E0277]: the trait bound `InterleaveMode: From<u8>` is not satisfied
   --> src\jpeg_stream_reader.rs:171:43
    |
171 |         self.parameters.interleave_mode = InterleaveMode::try_from(self.read_byte()?)?;
    |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `From<u8>` is not implemented for `InterleaveMode`
   --> src\lib.rs:8:1
    |
  8 | pub enum InterleaveMode {
    | ^^^^^^^^^^^^^^^^^^^^^^^
    = note: required for `u8` to implement `Into<InterleaveMode>`
    = note: required for `InterleaveMode` to implement `TryFrom<u8>`

warning: unused variable: `bytes_written`
  --> src\encoder.rs:78:14
   |
78 |          let bytes_written = if frame_info.bits_per_sample <= 8 {
   |              ^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
help: if this is intentional, prefix it with an underscore
   |
78 |          let _bytes_written = if frame_info.bits_per_sample <= 8 {
   |              +
help: you might have meant to pattern match on the similarly named constant `SEGMENT_MAX_DATA_SIZE`
   |
78 -          let bytes_written = if frame_info.bits_per_sample <= 8 {
78 +          let constants::SEGMENT_MAX_DATA_SIZE = if frame_info.bits_per_sample <= 8 {
   |

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
warning: `jpegexp-rs` (lib) generated 5 warnings
error: could not compile `jpegexp-rs` (lib) due to 4 previous errors; 5 warnings emitted
